--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <meta charset="UTF-8">
 <title>Title of the document</title>
 <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/slate/bootstrap.min.css" rel="stylesheet" integrity="sha384-RpX8okQqCyUNG7PlOYNybyJXYTtGQH+7rIKiVvg1DLg6jahLEk47VvpUyS+E2/uJ" crossorigin="anonymous">
-
+<script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
 
 <body>
 Content of the document
-<script src="https://d3js.org/d3.v4.min.js">
+<script>
+
   
   
   var data=[
